--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://davidloesch-fullstory.github.io/fsRelayDemo/",
   "name": "fs-relay",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +24,8 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
